Atualiza configuração do CI/CD para usar o GitHub Container Registry, ajusta permissões e modifica a ação do SonarQube. Refatora importações em arquivos de teste para manter a consistência no estilo de código. Altera a imagem do contêiner no arquivo de deployment para refletir a nova localização no registro.

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Run Tests for SonarQube
         run: npm run test:cov
       - name: SonarQube Scan
-        uses: sonarqube-quality-gate-action@master
+        uses: SonarSource/sonarqube-quality-gate-action@master
         with:
           scanMetadataReportFile: target/sonar/report-task.txt
         env:
@@ -107,22 +107,30 @@ jobs:
     needs: [test-acceptance, test-integration]
     if: github.ref == 'refs/heads/main' && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
     timeout-minutes: 10
+    permissions:
+      contents: read
+      packages: write
     steps:
-      - name: Configure Docker Hub
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Configure GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_HUB_USER }}
-          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and Push
         uses: docker/build-push-action@v6
         with:
+          context: .
           push: true
           build-args: |
             target=fiap-food-preparation
           tags: |
-            gm50x/fiap-food-preparation:latest
-            gm50x/fiap-food-preparation:v${{ github.run_number }}
+            ghcr.io/${{ github.repository_owner }}/fiap-food-preparation:latest
+            ghcr.io/${{ github.repository_owner }}/fiap-food-preparation:v${{ github.run_number }}
   deploy:
     name: 'Deploy Application'
     runs-on: ubuntu-latest
