Atualiza o caminho do relatório de cobertura no SonarQube e modifica o arquivo de configuração do CI/CD para remover etapas de análise de código e testes, além de ajustar a imagem do contêiner para o GitHub Container Registry. Adiciona suporte ao MongoDB no docker-compose para o ambiente de aceitação.

--- a/localstack/docker-compose.acceptance.yaml
+++ b/localstack/docker-compose.acceptance.yaml
@@ -1,6 +1,6 @@
 services:
   fiap-food-preparation:
-    image: fiapfood/preparation:latest
+    image: ghcr.io/thallis-andre/fiap-food-preparation:latest
     build:
       context: ..
       args:
@@ -9,7 +9,7 @@ services:
     environment:
       NODE_ENV: 'development'
       APP_NAME: 'FiapFoodPreparation'
-      APP_DESCRIPTION: 'Payments Component for Fiap Food'
+      APP_DESCRIPTION: 'Preparations Component for Fiap Food'
       APP_VERSION: '1.0.0'
       PORT: '3000'
       LOG_LEVEL: 'debug'
@@ -21,20 +21,46 @@ services:
       AMQP_URL: 'amqp://fiapfood:fiapfood@rabbitmq:5672'
     command: sh -c "sleep 10 && npm run start:prod"
     ports:
-      - 5000:3000
-    depends_on: [postgres, rabbitmq]
+      - 3000:3000
+    depends_on:
+      - postgres
+      - rabbitmq
   postgres:
     image: postgres:13
     environment:
       POSTGRES_PASSWORD: fiapfood
     ports:
       - 5432:5432
+  mongodb:
+    image: ghcr.io/thallis-andre/mongodbrs:6
+    build:
+      context: .
+      dockerfile: ./Dockerfile.mongodb
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: 'fiapfood'
+      MONGO_INITDB_ROOT_PASSWORD: 'fiapfood'
+    command: 'mongod --replSet rs0 --keyFile /opt/.keyfile/keyfile --bind_ip_all'
+    ports:
+      - 27017:27017
+  mongodb_init:
+    image: mongo:6
+    restart: 'on-failure'
+    depends_on: [mongodb]
+    command: >-
+      sh -c "sleep 10 && mongosh -u fiapfood -p fiapfood --host mongodb:27017 --eval 'rs.initiate({
+        \"_id\":\"rs0\",
+        "members":[
+          {
+            \"_id\": 0,
+            \"host\":\"mongodb:27017\",
+          },
+        ]
+      })' && if [ $(mongosh -u fiapfood -p fiapfood --quiet --host mongodb:27017 --eval 'rs.status().ok') -eq 1 ]; then exit 0; else exit 1; fi"
   rabbitmq:
-    image: fiapfood/rabbitmq:3-management-delayed
+    image: ghcr.io/thallis-andre/rabbitmq:3-management-delayed
     build:
       context: .
       dockerfile: ./Dockerfile.rabbitmq
-    # hostname: rabbitmq
     environment:
       RABBITMQ_DEFAULT_USER: 'fiapfood'
       RABBITMQ_DEFAULT_PASS: 'fiapfood'
