--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -4,12 +4,129 @@ on:
   push:
     branches:
       - main
+  pull_request:
   workflow_dispatch:
 
+env:
+  CI: true
+
 jobs:
+  code-analysis:
+    name: 'Analyze Code'
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20.9'
+      - name: Install Dependencies
+        run: npm install
+      - name: ESLint
+        run: npm run lint:check
+      - name: Run Tests for SonarQube
+        run: npm run test:cov
+      - name: Baixar SonarQube Scanner CLI
+        run: |
+          wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-linux.zip
+          unzip sonar-scanner-cli-5.0.1.3006-linux.zip
+          mv sonar-scanner-5.0.1.3006-linux sonar-scanner
+      - name: SonarQube Scanner
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: |
+          ./sonar-scanner/bin/sonar-scanner \
+            -Dsonar.projectKey=thallis-andre_fiap-food-preparation \
+            -Dsonar.organization=fiap-soat10-f4 \
+            -Dsonar.sources=. \
+            -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
+            -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
+            -Dsonar.javascript.lcov.reportPaths=coverage/unit/lcov.info \
+            -Dsonar.qualitygate.wait=true \
+            -Dsonar.scanner.metadataFilePath="${{ github.workspace }}/target/sonar/report-task.txt"
+      - name: Cria pasta target/sonar
+        run: mkdir -p target/sonar
+      - name: SonarQube Scan
+        uses: SonarSource/sonarqube-quality-gate-action@master
+        with:
+          scanMetadataReportFile: target/sonar/report-task.txt
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+  build:
+    name: 'Build'
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20.9'
+      - name: Install Dependencies
+        run: npm install
+      - name: Build
+        run: npm run build
+  test-unit:
+    name: 'Run Unit Tests'
+    runs-on: ubuntu-latest
+    needs: [build, code-analysis]
+    timeout-minutes: 10
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20.9'
+      - name: Install Dependencies
+        run: npm install
+      - name: Run Tests
+        run: npm run test:cov
+  test-integration:
+    name: 'Run Integration Tests'
+    runs-on: ubuntu-latest
+    needs: [test-unit]
+    timeout-minutes: 10
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20.9'
+      - name: Start Docker Dependencies
+        run: docker compose up -d
+      - name: Install Dependencies
+        run: npm install
+      - name: Run Tests
+        run: npm run test:integration:cov
+      - name: Teardown
+        run: docker compose down -v
+  test-acceptance:
+    name: 'Run Acceptance Tests'
+    runs-on: ubuntu-latest
+    needs: [test-unit]
+    timeout-minutes: 10
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20.9'
+      - name: Start Acceptance Tests Environment
+        run: docker compose -f localstack/docker-compose.acceptance.yaml up -d
+      - name: Install dependencies
+        run: npm install
+      - name: 'Wait 30s'
+        run: sleep 30
+      - name: Run Tests
+        run: npm run test:acceptance
+      - name: Teardown
+        run: docker compose down -v
   build-container:
     name: 'Build Application Container'
     runs-on: ubuntu-latest
+    needs: [test-acceptance, test-integration]
+    if: github.ref == 'refs/heads/main' && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
+    timeout-minutes: 10
     permissions:
       contents: read
       packages: write
@@ -17,7 +134,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Login no GHCR
+      - name: Configure GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -32,27 +149,29 @@ jobs:
           build-args: |
             target=fiap-food-preparation
           tags: |
-            ghcr.io/thallis-andre/fiap-food-preparation:latest
-            ghcr.io/thallis-andre/fiap-food-preparation:v${{ github.run_number }}
+            ghcr.io/${{ github.repository_owner }}/fiap-food-preparation:latest
+            ghcr.io/${{ github.repository_owner }}/fiap-food-preparation:v${{ github.run_number }}
+  deploy:
+    name: 'Deploy Application'
+    runs-on: ubuntu-latest
+    needs: [build-container]
+    environment: 'production'
+    if: github.ref == 'refs/heads/main' && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
+    steps:
+      - uses: actions/checkout@v4
 
-  # deploy:
-  #   name: 'Deploy Application'
-  #   runs-on: ubuntu-latest
-  #   needs: [build-container]
-  #   environment: 'production'
-  #   if: github.ref == 'refs/heads/main' && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - name: Configure AWS
-  #       uses: aws-actions/configure-aws-credentials@v4
-  #       with:
-  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #         aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-  #         aws-region: us-east-1
-  #     - name: Configure Kubectl
-  #       run: aws eks update-kubeconfig --name fiap-food-k8s
-  #     - name: Apply K8S
-  #       run: |
-  #         kubectl apply -f k8s/app.deployment.yaml
-  #         kubectl rollout restart deployment/fiap-food-preparation
+      - name: Configure AWS
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+          aws-region: us-east-1
+
+      - name: Configure Kubectl
+        run: aws eks update-kubeconfig --name fiap-food-k8s
+
+      - name: Apply K8S
+        run: |
+          kubectl apply -f k8s/app.deployment.yaml
+          kubectl rollout restart deployment/fiap-food-preparation
